--- a/src/app/aggrement/create-aggre/create-aggre.component.html
+++ b/src/app/aggrement/create-aggre/create-aggre.component.html
@@ -9,13 +9,13 @@
               <label class="form-control-label px-3">Nombre
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="fname" name="fname" formControlName="name">
+              <input type="text" id="fname" name="fname" formControlName="nombre">
             </div>
             <div class="form-group col-sm-6 flex-column d-flex">
               <label class="form-control-label px-3">Dirección
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="fname" name="fname" formControlName="location">
+              <input type="text" id="fname" name="fname" formControlName="ubicacion">
             </div>
           </div>
           <div class="row justify-content-between text-left">
@@ -23,25 +23,25 @@
               <label class="form-control-label px-3">Recursos
                 <span class="text-danger"> *</span>
               </label>
-              <textarea type="text" id="lname" name="lname" formControlName="resources"></textarea>
+              <textarea type="text" id="lname" name="lname" formControlName="recursos"></textarea>
             </div>
             <div class="form-group col-sm-6 flex-column d-flex">
               <label class="form-control-label px-3">Descripción
                 <span class="text-danger"> *</span>
               </label>
-              <textarea type="text" id="lname" name="lname" formControlName="description"></textarea>
+              <textarea type="text" id="lname" name="lname" formControlName="descripcion"></textarea>
             </div>
             <div class="form-group col-sm-6 flex-column d-flex">
               <label class="form-control-label px-3">Costo
                 <span class="text-danger"> *</span>
               </label>
-              <input type="number" id="fname" name="fname" formControlName="cost">
+              <input type="number" id="fname" name="fname" formControlName="costo">
             </div>
             <div class="form-group col-sm-6 flex-column d-flex">
               <label class="form-control-label px-3">Imagen
                 <span class="text-danger"> *</span>
               </label>
-              <input type="file" accept="image/*" formControlName="images">
+              <!-- <input type="file" accept="image/*" formControlName="imagenes"> -->
             </div>
           </div>
           <div class="row justify-content-between text-left">
@@ -66,7 +66,7 @@
               <label class="form-control-label px-3">Frecuencia
                 <span class="text-danger"> *</span>
               </label>
-              <select formControlName="frequency">
+              <select formControlName="frecuencia">
                 <option *ngFor="let sea of frequency" [value]="sea">{{sea}}</option>
               </select>
             </div>
@@ -74,7 +74,7 @@
               <label class="form-control-label px-3">Temporada
                 <span class="text-danger"> *</span>
               </label>
-              <select formControlName="season">
+              <select formControlName="temporada">
                 <option *ngFor="let sea of season" [value]="sea">{{sea}}</option>
               </select>
             </div>
@@ -84,12 +84,12 @@
               <label class="form-control-label px-3">Horario
                 <span class="text-danger"> *</span>
               </label>
-              <select formControlName="schedule">
+              <select formControlName="horario">
                 <option *ngFor="let sea of schedule" [value]="sea">{{sea}}</option>
               </select>
             </div>
             <div class="form-group col-sm-3"> <button type="submit" [disabled]="formCreate.invalid"  class="btn-block">AGREGAR</button> </div>
-            <div class="form-group col-sm-3"> <button type="submit" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
+            <div class="form-group col-sm-3"> <button type="button" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
           </div>
         </form>
       </div>
