--- a/src/app/aggrement/detail-aggre/detail-aggre.component.html
+++ b/src/app/aggrement/detail-aggre/detail-aggre.component.html
@@ -11,18 +11,18 @@
                   <h4 class="text-right">Convenio</h4>
               </div>
               <div class="row mt-2">
-                  <div class="col-md-5"><label class="labels">Nombre</label><p>nombre</p></div>
-                  <div class="col-md-6"><label class="labels">Descripción</label><p>12345</p></div>
+                  <div class="col-md-5"><label class="labels">Nombre</label><p>{{aggre.nombre}}</p></div>
+                  <div class="col-md-6"><label class="labels">Descripción</label><p>{{aggre.descripcion}}</p></div>
               </div>
               <div class="row mt-3">
-                  <div class="col-md-12"><label class="labels">Dirección</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Costo</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Área del conocimiento</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Subárea</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Recursos</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Frecuencia</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Temporada</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Horario</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Dirección</label><p>{{aggre.descripcion}}</p></div>
+                  <div class="col-md-12"><label class="labels">Costo</label><p>{{aggre.costo}}</p></div>
+                  <div class="col-md-12"><label class="labels">Área del conocimiento</label><p>{{aggre.area}}</p></div>
+                  <div class="col-md-12"><label class="labels">Subárea</label><p>{{aggre.subarea}}</p></div>
+                  <div class="col-md-12"><label class="labels">Recursos</label><p>{{aggre.recursos}}</p></div>
+                  <div class="col-md-12"><label class="labels">Frecuencia</label><p>{{aggre.frecuencia}}</p></div>
+                  <div class="col-md-12"><label class="labels">Temporada</label><p>{{aggre.temporada}}</p></div>
+                  <div class="col-md-12"><label class="labels">Horario</label><p>{{aggre.horario}}</p></div>
               </div>
           </div>
       </div>
