--- a/src/app/aggrement/read-aggre/read-aggre.component.html
+++ b/src/app/aggrement/read-aggre/read-aggre.component.html
@@ -14,15 +14,15 @@
   <div class="activity--grid">
     <div class="row">
   <!-- Gallery item -->
-      <div class="col-xl-3 col-lg-4 col-md-6 mb-4" *ngFor="let activity of activities | paginate: { itemsPerPage: 4, currentPage: page }">
-        <div class="bg-white rounded shadow-sm"><img [src]="activity.images" alt="" class="img-fluid card-img-top">
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4" *ngFor="let aggre of DTOAggrements | paginate: { itemsPerPage: 4, currentPage: page }">
+        <div class="bg-white rounded shadow-sm"><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-1.jpg" alt="" class="img-fluid card-img-top">
           <div class="p-4">
-            <h5> <a href="#" class="text-dark">{{activity.name}}</a></h5>
-            <p class="small text-muted mb-0">{{activity.description}}</p>
+            <h5> <a href="#" class="text-dark">{{aggre.nombre}}</a></h5>
+            <p class="small text-muted mb-0">{{aggre.descripcion}}</p>
             <div class="d-flex align-items-center justify-content-between rounded-pill px-3 py-2 mt-4">
-              <button [routerLink]="['/aggrement/detail']" class="button-info"><i class="fas fa-eye"></i></button>
-              <button [routerLink]="['/aggrement/update']" class="button-edit"><i class="fas fa-pen"></i></button>
-              <button (click)="delete()" class="button-delete"><i class="fas fa-trash"></i></button>
+              <button [routerLink]="['/aggrement/detail', aggre._id.$oid]" class="button-info"><i class="fas fa-eye"></i></button>
+              <button [routerLink]="['/aggrement/update', aggre._id.$oid]" class="button-edit"><i class="fas fa-pen"></i></button>
+              <button (click)="delete(aggre._id.$oid)" class="button-delete"><i class="fas fa-trash"></i></button>
             </div>
           </div>
         </div>
