--- a/src/app/test/do-test/do-test.component.css
+++ b/src/app/test/do-test/do-test.component.css
@@ -1,3 +1,20 @@
+
 span {
   font-style: italic;
+}
+.card{
+  max-width: 800px;
+  margin: auto;
+  padding: 10px;
+}
+li{
+  list-style-type: none;
+  cursor: pointer;
+  margin:10px 0;
+}
+li .card:hover{
+  border: 1px solid darkgreen;
+}
+ol{
+  padding: 0;
 }
