--- a/src/app/test/do-test/do-test.component.html
+++ b/src/app/test/do-test/do-test.component.html
@@ -1,19 +1,48 @@
 <div class="content">
   <div class="container mt-5">
     <div class="card">
-        <div class="d-flex justify-content-between p-3">
-         <h2>Test</h2>
+      <div class="d-flex justify-content-between p-3">
+        <div class="image">
+          <img src="https://i.imgur.com/ppbmz36.jpg" width="200" alt="logo">
         </div>
-        <div class="d-flex justify-content-between py-3">
-          <div class="question-remain">
-          <span>Question 1 of 9</span>
-          </div>
-          <div class="timer">
-            60 sec
-          </div>
+        <div class="quiz-header">
+          <h4 style="font-family:cursive;">Test Colegio</h4>
+          <samp style="font-style:italic;">¡Bienvenido!</samp>
+        </div>
+      </div>
+      <div class="d-flex.justify-content-around py-3">
+        <div class="topic">
+            <h5>{{topic}}</h5>
+        </div>
+        <div class="question-remain">
+          <p align="center">
+          <span  style ="font-style: italic ;text-aligh:center;">Pregunta {{currentQuestion+1}} de {{questionList.length}} </span>
+          </p>
         </div>
     </div>
+      <div class="progress mb-3">
+        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" [ngStyle]="{'width':progress+'%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <div class="question">
+            <div class="card">
+              <h3>{{questionList[currentQuestion]?.questionText}}</h3>
+            </div>
+      </div>
+      <div class="options">
+          <ol *ngFor="let option of questionList[currentQuestion]?.options">
+              <li (click)="answer(currentQuestion+1,option)">
+                  <div  class="card">
+                   {{option.text}}
+                  </div>
+              </li>
+          </ol>
+      </div>
+    </div>
+      <div class="d-flex justify-content-between">
+        <button [disabled]="currentQuestion===0" class="btn" (click)="previousQuestion()"><i class="fa fa-chevron-circle-left fa-3x " aria-hidden="true"></i></button>
+        <button [disabled]="currentQuestion===(questionList.length)-1"  class="btn" (click)="nextQuestion()"><i class="fa fa-chevron-circle-right fa-3x " aria-hidden="true"></i></button>
+
+      </div>
+
   </div>
 </div>
-
-
